--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "isomorphic-unfetch": "^2.0.0",
     "next": "^5.1.0",
     "react": "^16.2.0",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "styled-jsx": "^2.2.6"
   }
 }
