--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^5.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.3.2",
+    "react-markdown": "^3.3.0",
     "styled-jsx": "^2.2.6"
   }
 }
